# PoseTranslation

./: .gitignore  pyproject.toml
config/: config_default.yaml  config_sweep.yaml  config_swing_net_using_middle_labbel.yaml  config_swing_net_using_middle_label_and_distribution.yaml  config_swing_net_using_middle_label_and_distribution_backbone_r3d.yaml  config_swing_net_using_middle_label_and_distribution_using_flow.yaml  config_swing_net_v3.yaml
scripts/: install_torch_in_poetry.sh
src/: evaluate.py  train.py
src/dataset/: __init__.py  flower_dataset.py  golfdb.py
src/datasets/: __init__.py  flower_dataset.py  golfdb.py  golfdb_with_flow.py  video_dataset.py
src/libs/: config.py  device.py  helper.py  logger.py  transformer.py
src/libs/loss_fn/: __init__.py  action_segmentation_loss.py  focal.py  tmse.py
src/models/: ASFormer.py  __init__.py  phase_net.py  swing_net.py  swing_net_v2.py  swing_net_v3.py  tcn.py
src/util_scripts/: feature_extract.py  make_flow_video.py  visualize_label.py  visualize_model.py
